# HANSE2012

./: LICENSE
hanse_ros/: .gitignore  CMakeCache.txt  Makefile  go  rosdep.yaml  stack.xml
hanse_ros/automatic_color_equalization/: CMakeLists.txt  manifest.xml
hanse_ros/hanse_atmega/: CMakeLists.txt  aggregator.launch  diag.yaml  manifest.xml  uploadsettings
hanse_ros/hanse_atmega_new/: CMakeLists.txt  Makefile  fuses.txt
hanse_ros/hanse_atmega_ros/: mainpage.dox  manifest.xml
hanse_ros/hanse_ballfollowing/: manifest.xml
hanse_ros/hanse_behaviourctrl/: manifest.xml
hanse_ros/hanse_depthengine/: CMakeLists.txt  config_depth_pid.yaml  config_depthengine.yaml  mainpage.dox  manifest.xml
hanse_ros/hanse_enginecontrol/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  config_depth_pid.yaml  config_engine.yaml  config_orientation_pid.yaml  config_rotation_speed_pid.yaml  mainpage.dox  manifest.xml
hanse_ros/hanse_gamepad/: CMakeLists.txt  config_cyborg.yaml  config_saitek.yaml  config_xbox.yaml  mainpage.dox  manifest.xml
hanse_ros/hanse_launch/: manifest.xml  safe.sh
hanse_ros/hanse_movingcamera/: manifest.xml
hanse_ros/hanse_movingcameranode/: mainpage.dox  manifest.xml
hanse_ros/hanse_msgs/: mainpage.dox  manifest.xml
hanse_ros/hanse_navigation/: CMakeLists.txt  mainpage.dox  manifest.xml
hanse_ros/hanse_object_detection/: CMakeLists.txt  manifest.xml
hanse_ros/hanse_object_detection/cfg/: ObjectDetection.cfg  ball.yaml  pipe.yaml
hanse_ros/hanse_object_detection/docs/: ObjectDetectionConfig-usage.dox  ObjectDetectionConfig.dox  ObjectDetectionConfig.wikidoc
hanse_ros/hanse_object_detection/launch/: ball.launch  pipe.launch
hanse_ros/hanse_object_detection/src/: object_detection_node.cpp
hanse_ros/hanse_object_detection/src/hanse_object_detection/cfg/: ObjectDetectionConfig.py
hanse_ros/hanse_orientationengine/: CMakeLists.txt  config_orientation_pid.yaml  mainpage.dox  (+2 more)
hanse_ros/hanse_sonardriver/: CMakeLists.txt  mainpage.dox  manifest.xml
hanse_ros/hanse_sonardriver/cfg/: EchoSounder.cfg  ScanningSonar.cfg
hanse_ros/hanse_sonardriver/docs/: EchoSounderConfig-usage.dox  EchoSounderConfig.dox  EchoSounderConfig.wikidoc  ScanningSonarConfig-usage.dox  ScanningSonarConfig.dox  ScanningSonarConfig.wikidoc
hanse_ros/hanse_sonardriver/include/: echosounderdriver.h  echosounderswitchcommand.h  scanningsonarswitchcommand.h  sonardatasourceserial.h  sonardriver.h  sonardriver.impl.h  sonarreturndata.h  sonarswitchcommand.h
hanse_ros/hanse_sonardriver/launch/: playback_recording.launch  sonardriver.launch
hanse_ros/hanse_sonardriver/qextserialport/: qextserialport.h  qextserialport.pri  qextserialport_global.h  win_qextserialport.cpp
hanse_ros/hanse_sonardriver/sample_recordings/: italy1.852  italy2.852  scanningsonar.852
hanse_ros/hanse_sonardriver/src/: echosounderdriver.cpp  echosounderswitchcommand.cpp  recordeddatapublisher.cpp  scanningsonardriver.cpp  scanningsonardriver.h  scanningsonarswitchcommand.cpp  sonardatasourceserial.cpp  sonardatasourceserial.h  sonardriver.cpp  sonardriver.h  sonardriver.impl.h  sonarreturndata.cpp  sonarswitchcommand.cpp  sonarswitchcommand.h  sonarvisualize.cpp  sonarvisualize.h
hanse_ros/hanse_sonardriver/src/hanse_sonardriver/cfg/: EchoSounderConfig.py  ScanningSonarConfig.py
hanse_ros/hanse_sonarlocalization/: CMakeLists.txt  mainpage.dox  manifest.xml
hanse_ros/hanse_sonarlocalization/cfg/: OnlineWallDetection.cfg  ParticleFilter.cfg  WallDetection.cfg
hanse_ros/hanse_sonarlocalization/cmake/: FindEigen3.cmake
hanse_ros/hanse_sonarlocalization/docs/: OnlineWallDetectionConfig-usage.dox  OnlineWallDetectionConfig.dox  OnlineWallDetectionConfig.wikidoc  ParticleFilterConfig-usage.dox  ParticleFilterConfig.dox  ParticleFilterConfig.wikidoc  WallDetectionConfig-usage.dox  WallDetectionConfig.dox  WallDetectionConfig.wikidoc
hanse_ros/hanse_sonarlocalization/launch/: localization.launch  localization_online.launch  online_wall_detection.launch
hanse_ros/hanse_sonarlocalization/src/: localization.cpp  localization.h  online_wall_detection.cpp  online_wall_detection.h  particle.h  particle_filter.cpp  particle_filter.h  util.cpp  util.h  wall_detection.cpp  wall_detection.h  wall_markers.cpp  wall_markers.h  world_map.cpp  world_map.h
hanse_ros/hanse_sonarlocalization/src/hanse_sonarlocalization/cfg/: OnlineWallDetectionConfig.py  ParticleFilterConfig.py  WallDetectionConfig.py
hanse_ros/hanse_sonarlocalization/src/trng/trng/: config.hpp  generate_canonical.hpp
hanse_ros/hanse_wall_sonar/: .gitignore  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
hanse_ros/hanse_wall_sonar/cfg/: global_sonar_params.cfg  wall_follow_fancy_algo_params.cfg  wall_follow_fancy_node_params.cfg  wall_follow_params.cfg  wall_follow_publisher_node_params.cfg  wall_follow_shift_node_params.cfg
hanse_ros/hanse_wall_sonar/docs/: global_sonar_paramsConfig-usage.dox  global_sonar_paramsConfig.dox  global_sonar_paramsConfig.wikidoc
hanse_ros/hanse_wall_sonar/src/: debug_sonar.cpp  debug_sonar.h  eigen_plugin.h  global_sonar.cpp  global_sonar.h  iwall_follow_algo.cpp  iwall_follow_algo.h  orientation_aware_global_sonar.cpp  orientation_aware_global_sonar.h  wall_follow.cpp  wall_follow.h  wall_follow_fancy_algo.cpp  wall_follow_fancy_algo.h  wall_follow_fancy_node.cpp  wall_follow_fancy_node.h  wall_follow_publisher_node.cpp  wall_follow_publisher_node.h  wall_follow_shift_algo.cpp  wall_follow_shift_algo.h  wall_follow_shift_node.cpp  wall_follow_shift_node.h
hanse_ros/hanse_wall_sonar/src/eigen_plugin/: matrixbase_plugin.h  quaternionbase_plugin.h  quaternionbase_plugin.h.autosave
hanse_ros/hanse_wall_sonar/src/hanse_wall_sonar/cfg/: global_sonar_paramsConfig.py  wall_follow_fancy_algo_paramsConfig.py  wall_follow_fancy_node_paramsConfig.py  wall_follow_paramsConfig.py  wall_follow_publisher_node_paramsConfig.py  wall_follow_shift_algo_paramsConfig.py
hanse_ros/hanse_wall_sonar/test/: orientation_cfg.yaml
hanse_ros/hanse_wall_sonar/test_env/: orientationPid.yaml
(+375 files in other folders)
